use UUIDs instead of Strings